fix: panel z-index but better mieux

--- a/transcendence/pong/static/pong/styles.css
+++ b/transcendence/pong/static/pong/styles.css
@@ -238,7 +238,7 @@ body {
 .login-panel {
     display: none;
     position: fixed;
-    z-index: 999;
+    z-index: 989;
     top: 0;
     right: 0;
     width: 320px;
